tests/invalid/Parsing_Invalid_24.whiley
function f(int x) -> (int r):
    if(x >= 0):
      int y = x + 1
    else:
      int y = 0
    //
    return y
